fix tooltip covering the inputs

--- a/src/components/Tooltip/index.scss
+++ b/src/components/Tooltip/index.scss
@@ -12,8 +12,7 @@ $tooltip-color: rgb(46,46,46);
   top: 50%;
   left: 110%;
   opacity: 0;
-  z-index: 1;
-  transition: .3s opacity;
+  z-index: -1;
   position: absolute;
   font-size: 14px;
   padding: 5px;
@@ -22,10 +21,12 @@ $tooltip-color: rgb(46,46,46);
   background-color: $tooltip-color;
   color: white;
   transform: translate(0, -50%);
+  animation: tooltip-fade-out .3s linear forwards;
 }
 .hover-trigger:hover + .tooltip {
-  opacity: 1;
+  animation: tooltip-fade-in .3s linear forwards;
 }
+// The little triangle connected to the tooltip box.
 .hover-trigger + .tooltip::after {
   content: " ";
   position: absolute;
@@ -35,4 +36,34 @@ $tooltip-color: rgb(46,46,46);
   border-width: 5px;
   border-style: solid;
   border-color: transparent $tooltip-color transparent transparent;
+}
+
+@keyframes tooltip-fade-in {
+  0% {
+    z-index: -1;
+    opacity: 0;
+  }
+  1% {
+    z-index: 1;
+    opacity: 0;
+  }
+  100% {
+    z-index: 1;
+    opacity: 1;
+  }
+}
+
+@keyframes tooltip-fade-out {
+  0% {
+    z-index: 1;
+    opacity: 1;
+  }
+  99% {
+    z-index: 1;
+    opacity: 0;
+  }
+  100% {
+    z-index: -1;
+    opacity: 0;
+  }
 }
